Add links to the navbar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         logo
       </div>
       <ul class="links">
-        <li href="#">one</li>
-        <li href="#">two</li>
-        <li href="#">three</li>
+        <li><a href="#">one</a></li>
+        <li><a href="#">two</a></li>
+        <li><a href="#">three</a></li>
       </ul>
     </div>
     <div class="hero">
