--- a/index.html
+++ b/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Landing Page</title>
-</head>
-<body>
-  <div class="header">
-    <div class="nav">
-      <div class="logo">
-        logo
-      </div>
-      <ul class="links">
-        <li><a href="#">one</a></li>
-        <li><a href="#">two</a></li>
-        <li><a href="#">three</a></li>
-      </ul>
-    </div>
-    <div class="hero">
-      <div class="description">
-        <h1>Bla bla bla</h1>
-        <p>Some description</p>
-        <a href="#">Sign Up</a>
-      </div>
-    </div>
-      <div class="image">
-        image
-      </div>
-  </div>
-  <div class="body">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Landing Page</title>
+  </head>
 
-  </div>
-  <div class="footer">
+  <body>
+    <div class="header">
+      <div class="nav">
+        <div class="logo">
+          <a href="index.html"><img id="logo" src="images/watermelon-logo.png"></a>
+        </div>
+        <ul class="links">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Sign up</a></li>
+          <li><a href="#">Log in</a></li>
+        </ul>
+      </div>
+      <div class="hero">
+        <div class="description">
+          <div class="title">Watermelons! 🍉</div>
+          <p>Watermelons are very sweet and delicious. Even dogs like to eat them!</p>
+          <form action="#">
+            <button class="signup" type="submit">
+              Give me one!
+            </button>
+          </form>
+        </div>
+        <div class="hero-image">
+          <img id="hero-image" src="images/watermelon-hero.png">
+        </div>
+      </div>
+    </div>
+    <div class="body">
 
-  </div>
-</body>
+    </div>
+    <div class="footer">
+
+    </div>
+  </body>
 </html>
