--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="hero">
         <div class="description">
-          <div class="title">Watermelons! 🍉</div>
+          <div class="title">Watermelons 🍉</div>
           <p>Watermelons are very sweet and delicious. Even dogs like to eat them!</p>
           <form action="#">
             <button class="signup" type="submit">
@@ -36,7 +36,34 @@
       </div>
     </div>
     <div class="body">
-
+      <div class="section-1">
+        <div class="title">
+          Take a look at these pictures!
+        </div>
+        <div class="watermelons">
+          <div class="watermelon one">
+            <img src="images/dorien-monnens-watermelon-car.jpg" alt="watermelon-car">
+            <div class="text">This car is full of watermelons. Crazy, isn't it?</div>
+          </div>
+          <div class="watermelon two">
+            <img src="images/watermelon-love.jpg" alt="">
+            <div class="text">With ❤️ from a watermelon.</div>
+          </div>
+          <div class="watermelon three">
+            <img src="images/watermelon-ice-cream.jpg" alt="">
+            <div class="text">A watermelon ice cream. Yummy!</div>
+          </div>
+          <div class="watermelon four">
+            <img src="images/not-a-watermelon.jpg" alt="">
+            <div class="text">Yet another beautiful waterme... hold on. Is something wrong?</div>
+          </div>
+        </div>
+      </div>
+      <div class="section-2">
+      </div>
+      <div class="section-3">
+        
+      </div>
     </div>
     <div class="footer">
 
