Add <span> tag to the 4th image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="text">A watermelon ice cream. Yummy!</div>
           </div>
           <div class="watermelon four">
-            <img src="images/not-a-watermelon.jpg" alt="">
+            <img title="Sliced dragon fruits." src="images/not-a-watermelon.jpg" alt="">
             <div class="text">Yet another beautiful waterme... hold on. Is something wrong?</div>
           </div>
         </div>
