--- a/index.html
+++ b/index.html
@@ -54,12 +54,17 @@
             <div class="text">A watermelon ice cream. Yummy!</div>
           </div>
           <div class="watermelon four">
-            <img title="Sliced dragon fruits." src="images/not-a-watermelon.jpg" alt="">
+            <img title="Sliced dragon fruits" src="images/not-a-watermelon.jpg" alt="">
             <div class="text">Yet another beautiful waterme... hold on. Is something wrong?</div>
           </div>
         </div>
       </div>
       <div class="section-2">
+        <div class="inside">
+          <p class="quote">“For it’s the sweetheart kissing season, 
+            and all the world’s in rhyme when it’s watermelon sweet love telling time.”</p>
+          <p class="author">― Greg Pizzoli</p>
+        </div>
       </div>
       <div class="section-3">
         
