--- a/index.html
+++ b/index.html
@@ -60,14 +60,24 @@
         </div>
       </div>
       <div class="section-2">
-        <div class="inside">
+        <div class="container">
           <p class="quote">“For it’s the sweetheart kissing season, 
             and all the world’s in rhyme when it’s watermelon sweet love telling time.”</p>
           <p class="author">― Greg Pizzoli</p>
         </div>
       </div>
       <div class="section-3">
-        
+        <div class="container">
+          <div class="information">
+            <p class="title">Want more?</p>
+            <p class="info">Subscribe to be up to date with our latest watermelons!</p>
+          </div>
+          <form action="">
+            <button class="subscribe" type="submit">
+              Subscribe
+            </button>
+          </form>
+        </div>
       </div>
     </div>
     <div class="footer">
