--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </div>
           <div class="watermelon four">
             <img title="Sliced dragon fruits" src="images/not-a-watermelon.jpg" alt="">
-            <div class="text">Yet another beautiful waterme... hold on. Is something wrong?</div>
+            <div class="text">Yet another beautiful waterme... hold on. There is something wrong.</div>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
       </div>
     </div>
     <div class="footer">
-
+      <p class="copyright">Copyright © nanachichi 2022</p>
     </div>
   </body>
 </html>
